Fixs and add homework 19,20,21sql(still dealing with the student database)